output_10.1.168/qio_field.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
/tmp/qio_field.h-be6eb0.hip:14:67: error: unknown type name 'QudaPrecision'
inline void read_gauge_field(const char *filename, void *gauge[], QudaPrecision prec,
                                                                  ^
/tmp/qio_field.h-be6eb0.hip:16:3: error: no matching function for call to 'printf'
  printf("QIO support has not been enabled\n");
  ^~~~~~
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:371:16: note: candidate function not viable: call to __device__ function from __host__ function
__device__ int printf(const char *, ...);
               ^
/tmp/qio_field.h-be6eb0.hip:19:68: error: unknown type name 'QudaPrecision'
inline void write_gauge_field(const char *filename, void *gauge[], QudaPrecision prec,
                                                                   ^
/tmp/qio_field.h-be6eb0.hip:21:3: error: no matching function for call to 'printf'
  printf("QIO support has not been enabled\n");
  ^~~~~~
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:371:16: note: candidate function not viable: call to __device__ function from __host__ function
__device__ int printf(const char *, ...);
               ^
/tmp/qio_field.h-be6eb0.hip:24:64: error: unknown type name 'QudaPrecision'
inline void read_spinor_field(const char *filename, void *V[], QudaPrecision precision, const int *X,
                                                               ^
/tmp/qio_field.h-be6eb0.hip:26:3: error: no matching function for call to 'printf'
  printf("QIO support has not been enabled\n");
  ^~~~~~
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:371:16: note: candidate function not viable: call to __device__ function from __host__ function
__device__ int printf(const char *, ...);
               ^
/tmp/qio_field.h-be6eb0.hip:29:65: error: unknown type name 'QudaPrecision'
inline void write_spinor_field(const char *filename, void *V[], QudaPrecision precision, const int *X,
                                                                ^
/tmp/qio_field.h-be6eb0.hip:31:3: error: no matching function for call to 'printf'
  printf("QIO support has not been enabled\n");
  ^~~~~~
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:371:16: note: candidate function not viable: call to __device__ function from __host__ function
__device__ int printf(const char *, ...);
               ^
9 errors generated when compiling for host.
Error while processing /tmp/qio_field.h-be6eb0.hip.

[HIPIFY] info: file './quda/include/qio_field.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 1524
  CHANGED lines of code: 1
  TOTAL lines of code: 37
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 3
  TIME ELAPSED s: 0.20
